--- a/tinder-clone/src/Header.css
+++ b/tinder-clone/src/Header.css
@@ -7,12 +7,12 @@
 
 .header__logo {
   height: 40px;
-  width: 40px;
   padding: 20px;
   object-fit: contain;
 }
 
 .header__icon {
   padding: 20px;
+  height: 25px;
   object-fit: contain;
 }
